# celestial-container-migration

./: .gitignore  01-network-manager-all.yaml  LICENSE  README.md  Release.key  checkpoint.py  clean.sh  client.py  config.py  cr.py  docker_client.py  generate_random_data.py  http_client.py  http_server.py  main.py  migrate_container.py  open_terminals.sh  podman_client.py  prepare.sh  pyproject.toml  redis_client.py  request_container.py  requirements.txt  restore.py  server.py  setup.py  utils.py
builder/: Dockerfile  README.md  build-script.sh  ceinit  start-script
celestial-app/: Makefile  README.md  aliens.txt  celestial.toml  celestial_container_migration_gst_client-0.6.0-py3-none-any.whl  celestial_container_migration_gst_server-0.5.0-py3-none-any.whl  celestial_container_migration_gst_server-0.6.0-py3-none-any.whl  celestial_container_migration_sat_server-0.5.0-py3-none-any.whl  celestial_container_migration_sat_server-0.6.0-py3-none-any.whl  client-base.sh  client.sh  copy_results.sh  copy_to_coordinator.sh  copy_to_host.sh  copy_to_instance.sh  copy_to_instance0.sh  copy_to_instance1.sh  gst-base.sh  gst.sh  restart_experiment.sh  run-celestial-on-coord.sh  run_coord.sh  run_instance.sh  run_instance0.sh  run_instance1.sh  sat-base.sh  sat.sh  ssh_to_host.sh  ssh_to_host1.sh  sshcoord.sh  sshhost0.sh  sshtohost1.sh  variables.tf
data/: README.md  client-0.csv  client-100.csv  client-1000.csv  client-1500.csv  client-2000-og.csv  client-2000.csv  client-500.csv  client-5000.csv  client.csv  migration-0.csv  migration-100.csv  migration-1000.csv  migration.csv  (+15 more)
(+71 files in other folders)
