[project]
name = "celestial-container-migration"
version = "0.1.0"
description = "A server and tools for migrating containers between celestial VMs."
authors = [
    { name = "Stanislav Kosorin", email = "s.kosorin@campus.tu-berlin.de" }
]
license = { file = "LICENSE" }
dependencies = [
    "async-timeout==4.0.3",
    "blinker==1.6.3",
    "certifi==2023.7.22",
    "charset-normalizer==3.3.1",
    "click==8.1.7",
    "flask==3.0.0",
    "idna==3.4",
    "importlib-metadata==6.8.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "packaging==23.2",
    "podman==4.7.0",
    "pyxdg==0.28",
    "redis==5.0.1",
    "requests==2.31.0",
    "tomli==2.0.1",
    "tqdm==4.66.1",
    "urllib3==1.24.3",
    "websocket-client==1.6.4",
    "werkzeug==3.0.0",
    "zipp==3.17.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
start-server = "src.main_server:main"